--- a/reservation_project/templates/reservationtable.html
+++ b/reservation_project/templates/reservationtable.html
@@ -132,7 +132,7 @@
                 <ul class="navbar-list">
 
                     <li class="navbar-item">
-                        <a href="./index.html" class="navbar-link hover-underline active">
+                        <a href="{% url 'index' %}" class="navbar-link hover-underline active">
                             <div class="separator"></div>
 
                             <span class="span">Home</span>
@@ -197,7 +197,7 @@
 
             </nav>
 
-            <a href="#reserve-table" class="btn btn-secondary">
+            <a href="{% url 'reservationtable_page' %}" class="btn btn-secondary">
                 <span class="text text-1">Find A Table</span>
 
                 <span class="text text-2" aria-hidden="true">Find A Table</span>
@@ -236,7 +236,7 @@
                 <!-- Reserved Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/Reserved.jpg" alt="Reserved Table" class="img-cover">
+                        <img src="{%static 'images/Reserved.jpg'%}" alt="Reserved Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -248,7 +248,7 @@
                 <!-- Empty Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/table.jpg" alt="Empty Table" class="img-cover">
+                        <img src="{%static 'images/table.jpg'%}" alt="Empty Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -259,7 +259,7 @@
                 <!-- Reserved Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/Reserved.jpg" alt="Reserved Table" class="img-cover">
+                        <img src="{%static 'images/Reserved.jpg'%}" alt="Reserved Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -270,7 +270,7 @@
                 <!-- Empty Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/table.jpg" alt="Empty Table" class="img-cover">
+                        <img src="{%static '/images/table.jpg'%}" alt="Empty Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -281,7 +281,7 @@
                 <!-- Reserved Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/Reserved.jpg" alt="Reserved Table" class="img-cover">
+                        <img src="{%static 'images/Reserved.jpg'%}" alt="Reserved Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -292,7 +292,7 @@
                 <!-- Empty Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/table.jpg" alt="Empty Table" class="img-cover">
+                        <img src="{%static 'images/table.jpg'%}" alt="Empty Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -303,7 +303,7 @@
                 <!-- Reserved Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/Reserved.jpg" alt="Reserved Table" class="img-cover">
+                        <img src="{%static 'images/Reserved.jpg'%}" alt="Reserved Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -314,7 +314,7 @@
                 <!-- Empty Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/table.jpg" alt="Empty Table" class="img-cover">
+                        <img src="{%static 'images/table.jpg'%}" alt="Empty Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
@@ -325,7 +325,7 @@
                 <!-- Reserved Table -->
                 <div class="table card">
                     <div class="table-image">
-                        <img src="./assets/images/Reserved.jpg" alt="Reserved Table" class="img-cover">
+                        <img src="{%static 'images/Reserved.jpg'%}" alt="Reserved Table" class="img-cover">
                     </div>
                     <div class="table-details">
                         <p class="table-time label-2">15/09/2022 - 8:00 PM</p>
