--- a/reservation_project/templates/index.html
+++ b/reservation_project/templates/index.html
@@ -196,8 +196,7 @@
         </div>
 
       </nav>
-
-      <a href="./reservationtable.html" class="btn btn-secondary">
+      <a href="{% url 'reservationtable_page' %}" class="btn btn-secondary">  
         <span class="text text-1">Find A Table</span>
 
         <span class="text text-2" aria-hidden="true">Find A Table</span>
