--- a/reservation_project/templates/index.html
+++ b/reservation_project/templates/index.html
@@ -514,7 +514,7 @@
               <span class="span body-1">$20.00</span>
             </div>
 
-            <a href="./menu.html" class="btn btn-primary">
+            <a href="{% url 'menu_page' %}" class="btn btn-primary">
               <span class="text text-1">View All Menu</span>
 
               <span class="text text-2" aria-hidden="true">View All Menu</span>
